--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^9.11.1",
     "firebaseui": "^5.0.0",
     "framer-motion": "^4.1.17",
+    "mongoose": "^6.0.0",
     "netlify-identity-widget": "^1.9.2",
     "next": "11.1.0",
     "react": "17.0.2",
