--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "firebaseui": "^5.0.0",
     "framer-motion": "^4.1.17",
     "gotrue-js": "^0.9.29",
+    "mongodb": "^4.1.1",
     "mongoose": "^6.0.0",
     "netlify-identity-widget": "^1.9.2",
     "next": "11.1.0",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
