--- a/package.json
+++ b/package.json
@@ -25,13 +25,10 @@
     "gotrue-js": "^0.9.29",
     "mongodb": "^3.5.9",
     "mongoose": "^6.0.0",
-    "netlify-identity-widget": "^1.9.2",
     "next": "11.1.0",
-    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
-    "react-loading-skeleton": "^2.2.0"
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
