--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^3.5.9",
     "mongoose": "^6.0.0",
     "next": "11.1.0",
+    "next-pwa": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
@@ -31,7 +32,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0"
   },
-  "peerOptionalDependencies":{
+  "peerOptionalDependencies": {
     "mongodb": "^4.1.1"
   }
 }
